# cartesi-odds-evens

./: Cargo.toml  LICENSE  README.md
src/: game.rs  main.rs
